# soft-pointer-networks

./: .gitignore  .prospector.yaml  Makefile  README.md  Soft_Pointer_Network_DEMO.ipynb  Soft_Pointer_Network_RAW.ipynb  V22_[Final]_DARPA_TIMIT_Acoustic_Phonetic_Continuous_Speech.ipynb  clean-start-ce3.ckpt  components.py  constants.py  dataset_loader.py  dependencies.py  derp.py  eval.py  load.py  panns_example.py  prospector.yaml  pyproject.toml  requirements.txt  setup.cfg  simple_example.py  streamlined_example.py  test.ipynb  tools.py  training_helpers.py  wip.py
dataloading/: dataset.py  dto.py  loadz.py  test.ipynb  transforms.py  utils.py
example/: mask_audio.pt  mask_transcription.pt  w.pt
models/: base.py  components.py  ctc_model.py  duration_model.py  soft_pointer_network.py
spn/: constants.py  dataset_loader.py  download.py  tools.py  training_helpers.py
spn/dto/: base.py  utils.py
spn/models/: base.py  components.py  panns.py  soft_pointer_network.py
spn/trained_weights/: CTC-lstm-final.pth
spnz/: components.py  eval.py  model.py  model_old.py  panns.py  streamlined_example.py  test.ipynb  train.py
