[tool.poetry]
name = "soft-pointer-network"
version = "0.0.0"
description = "Index/pointer generation using differentiable softmax."
authors = ["Fred-Eric Kirsi <vegetablejuiceftw@gmail.com>"]
packages = [
    { include = "models" },
]

[tool.poetry.dependencies]
python = "^3.8"
# data versioning
dvc = {extras = ["s3"], version = "*"}
webdataset = "*"
# models
transformers = "^4.2.2"
# force the latest cpu only version, https://download.pytorch.org/whl/torch_stable.html
torch = "^1.10.2"
# consumer
python-dotenv = {extras = ["cli"], version = "*"}
pytest = "^6.2.5"
PyYAML = "*"
dtw = "^1.4.0"
fastdtw = "^0.3.4"
dtaidistance = "^2.3.6"
python_speech_features = "^0.6"
AudAugio = "^0.0.2-alpha.0"
pyrubberband = "^0.3.0"
kaggle = "^1.5.12"
torchtext = "^0.11.2"
pandas = "^1.4.1"
pyloudnorm = "^0.1.0"
gdown = "^4.4.0"
pycapnp = "^1.1.0"
pydantic = "^1.9.0"
orjson = "^3.6.7"
tqdm = "^4.63.0"

[tool.poetry.dev-dependencies]
pytest = "==6.*"
matplotlib = "*"
# Testing & quality tools
black = "==20.8b1"
pytest-pep8 = "^1.0.6"
isort = "==4.*"
# Note prospector is very picky about its dependencies,
# avoid specifying versions for pylint/pylint-django/astroid
# and let prospector determine which versions work together
prospector = "==1.3.1"
flynt = "==0.52"
docformatter = "*"
autopep8 = "==1.5.*"
autoflake = "*"
cleanpy = "*"
add-trailing-comma = "*"
trim = "*"
unify = "*"
pyupgrade = "*"
yapf = "*"

[tool.poetry.extras]
torch = ["torch"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | local.py
  | local_test.py
)
'''

[tool.isort]
line_length = '120'
atomic = 'true'
multi_line_output = '3'
include_trailing_comma = 'true'
known_pytest = "pytest"
lines_between_types = '0'
sections = "FUTURE,STDLIB,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = '2'
force_alphabetical_sort_within_sections = '1'
