[tool.poetry]
name = "soft-pointer-network"
version = "0.0.0"
description = "Index/pointer generation using differentiable softmax."
authors = ["Fred-Eric Kirsi <vegetablejuiceftw@gmail.com>"]
packages = [
]

[tool.poetry.dependencies]
python = "^3.10"
# data versioning
webdataset = "*"
# force the latest cpu only version, https://download.pytorch.org/whl/torch_stable.html
torch = "^1.13.1"
# consumer
python-dotenv = {extras = ["cli"], version = "*"}
PyYAML = "*"
dtw = "*"
fastdtw = "*"
dtaidistance = "*"
python_speech_features = "*"
pyrubberband = "*"
pandas = "*"
pyloudnorm = "*"
gdown = "*"
pydantic = "*"
tqdm = "*"
pytorch-lightning = "*"
torchlibrosa = "*"
panns-inference = "*"
plotly = "*"
datasets = "^2.7.1"
numba = "^0.56.4"

[tool.poetry.dev-dependencies]
jupyter = "*"
ipython = "7.*"
ipykernel = "*"
ipywidgets = "^7.6.5"
plotly = "*"
matplotlib = "*"
# Testing & quality tools
black = "*"
pytest-pep8 = "*"
isort = "*"
# Note prospector is very picky about its dependencies,
# avoid specifying versions for pylint/pylint-django/astroid
# and let prospector determine which versions work together
prospector = "*"
flynt = "*"
docformatter = "*"
autopep8 = "*"
autoflake = "*"
cleanpy = "*"
add-trailing-comma = "*"
trim = "*"
unify = "*"
pyupgrade = "*"
yapf = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | local.py
  | local_test.py
)
'''

[tool.isort]
line_length = '120'
atomic = 'true'
multi_line_output = '3'
include_trailing_comma = 'true'
known_pytest = "pytest"
lines_between_types = '0'
sections = "FUTURE,STDLIB,PYTEST,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
lines_after_imports = '2'
force_alphabetical_sort_within_sections = '1'
